--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -115,7 +115,7 @@ body{
 }
 
 .set-middle{
-    background: -webkit-linear-gradient(top,rgba(126,187,201,1) 0,rgba(44,194,195,.9) 70%,rgba(44,194,195,.6) 100%);
+    /*background: -webkit-linear-gradient(top,rgba(126,187,201,1) 0,rgba(44,194,195,.9) 70%,rgba(44,194,195,.6) 100%);*/
     height: 376px;
     box-sizing: border-box;
     overflow: hidden;
